# truewords-platform

./: .gitignore  AGENTS.md  README.md  eval_results.json  pyrightconfig.json
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 18f0a2bc2259_initial_schema.py  1ee1295dc7f4_add_data_source_categories_table.py  33d34f262dc2_add_volume_raw_to_answer_citation.py  3f5f5bf0893b_expand_volume_raw_to_varchar_255.py  (+15 more)
backend/api/: routes.py
backend/scripts/: add_categories_and_bots.py  add_notebooklm_bots.py  analyze_notebooklm_categories.py  analyze_per_source_hit_rate.py  backfill_ingestion_jobs.py  backfill_sample.py  backfill_volume_payload.py  baseline_diff.py  batch_chunk_paragraph.py  batch_chunk_paragraph_v4.py  batch_chunk_theology.py  batch_chunk_theology_contextual.py  bench_theology_bot.py  build_codex_compare_md.py  build_contextual_prefix.py  build_phase2_3way_report.py  build_phase2_combined_report.py  build_phase2_v3v4_report.py  build_phase3_codex_compare.py  build_phase4_3way_codex.py  build_ragas_html_report.py  build_ragas_seeds_from_ab.py  check_upload_status.py  chunking_poc.py  cleanup_semantic_cache.py  collect_seed_answers.py  compare_rerankers.py  copy_qdrant_vectors.py  create_admin.py  create_collection_v2.py  dump_chunks_to_jsonl.py  eval_llm_judge.py  eval_metrics_direct.py  eval_notebooklm_qa.py  eval_per_source.py  eval_ragas.py  eval_ragas_batched.py  eval_theology_3way.py  evaluate.py  evaluate_threshold.py  (+22 more)
backend/src/: config.py  qdrant_client.py
backend/tests/: conftest.py  test_admin_auth.py  test_alembic_advisory_lock.py  test_analytics_queries.py  test_analytics_query_details.py  test_analytics_session_detail.py  test_answer_citation_volume_raw.py  test_answer_review.py  test_api.py  test_batch_backfill.py  test_batch_embedder.py  test_batch_models.py  test_batch_service.py  test_batch_service_on_duplicate.py  test_cache_graceful_degradation.py  test_cache_integration.py  test_cache_service_raw_httpx.py  test_cascading.py  test_chat_repository_popular.py  test_chat_repository_version.py  test_chat_router_errors.py  test_chat_service.py  test_chat_stream_service.py  test_chatbot_config.py  test_chatbot_runtime_config_factory.py  test_chatbot_system_prompt.py  test_chatbot_weighted_config.py  test_chunk_merge.py  test_chunk_payload.py  test_chunker.py  test_chunker_hierarchical.py  test_chunker_v2.py  test_chunking_poc.py  test_chunks_router.py  test_citation_meta.py  test_collection_resolver.py  test_common_schemas.py  test_config_staging.py  test_crisis_overrides.py  test_data_router_delete.py  (+38 more)
(+422 files in other folders)
