[project]
name = "truewords-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "qdrant-client[fastembed]>=1.12.0",
    "google-genai>=0.8.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    # PostgreSQL
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "kss>=6.0.6",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "testcontainers[postgres]>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
