[project]
name = "truewords-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "qdrant-client[fastembed]>=1.12.0",
    "google-genai>=0.8.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    # PostgreSQL
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "kss>=6.0.6",
    "python-multipart>=0.0.22",
    "aiosqlite>=0.22.1",
    # Reranker (ML) — BGE cross-encoder. transformers + torch 자동 포함
    "sentence-transformers>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "testcontainers[postgres]>=4.0.0",
]

# RAGAS 평가 도구 + xlsx I/O. 평가 스크립트(backend/scripts/eval_ragas.py,
# sample_eval_pairs.py)와 임계값 회귀 테스트(tests/test_ragas_thresholds.py)에서 사용한다.
# 운영 코드는 의존하지 않으므로 별도 group으로 분리한다.
eval = [
    "openpyxl>=3.1",
    "ragas>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
